# Projet_Fractales_S9

./: CMakeLists.txt  go  makefile
src/: Mandelbrot.cpp  Mandelbrot.hpp  main.cpp  main.cu
src/Color/: ColorLibrary.hpp  ColorMap.hpp
src/Color/ColorSmooth/: ColorSmooth.cpp  ColorSmooth.hpp
src/Color/Colorblue/: Colorblue.cpp  Colorblue.hpp
src/Color/Colorgreen/: Colorgreen.cpp  Colorgreen.hpp
src/Color/Colorgrey/: Colorgrey.cpp  Colorgrey.hpp
src/Convergence/: Convergence.cpp  Convergence.hpp  ConvergenceLibrary.hpp
src/Convergence/double/: Calcul_GPU.cu  Calcul_GPU.cuh  Convergence_GPU.cpp  Convergence_GPU.cu  Convergence_GPU.hpp  Convergence_dp_x86.cpp  Convergence_dp_x86.cu  Convergence_dp_x86.cuh  Convergence_dp_x86.hpp
src/Convergence/double_dp_omp_x86/: Convergence_dp_omp_x86.cpp  Convergence_dp_omp_x86.hpp
src/Convergence/double_gpu/: Convergence_GPU.cu  Convergence_GPU.hpp  kernel_GPU.cu  kernel_GPU.cuh
src/Convergence/double_gpu_julia/: Convergence_GPU_julia.cu  Convergence_GPU_julia.hpp  kernel_GPU_julia.cu  kernel_GPU_julia.cuh
src/Convergence/double_gpu_mme/: Convergence_GPU_mme.cu  Convergence_GPU_mme.hpp  kernel_GPU_mme.cu  kernel_GPU_mme.cuh
src/Convergence/double_gpu_mr/: Convergence_GPU_mr.cu  Convergence_GPU_mr.hpp  kernel_GPU_mr.cu  kernel_GPU_mr.cuh
src/Convergence/double_gpu_multibrot/: Convergence_GPU_multibrot.cu  Convergence_GPU_multibrot.hpp  kernel_GPU_multibrot.cu  kernel_GPU_multibrot.cuh
src/Convergence/double_gpu_ship/: Convergence_GPU_ship.cu  Convergence_GPU_ship.hpp  (+2 more)
src/Utils/: FileHandler.hpp  Utils.hpp
(+36 files in other folders)
